--- a/_inc/front-calendar_default.css
+++ b/_inc/front-calendar_default.css
@@ -26,15 +26,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
   border-collapse: collapse;
   background-color: transparent;
   border: none;
-  margin: 0 20px auto 10px;
+  margin: 0;
   width: 100%;
   font-family: 'Ubuntu', verdana, arial, sans-serif;
 }
 #fdcalendarsx table.month td{
   border: none;
-}
-table.month tbody tr:nth-child(2) {
-    background-color: #ebebeb;
 }
 #fdcalendarsx table.month tbody,
 #fdcalendarsx table.month tfoot,
@@ -103,13 +100,13 @@ div.calmain {
 }
 div.calyrmo {
   float: left;
-  display: flex;
+  /*display: flex;*/
   flex-wrap: wrap;
   text-align: right;
   width: 50%;
   margin-top: 2vw;
   padding-left: 0;
-  padding-right: 0;
+  padding-right: 2vw;
 }
 table.dates-descriptions  {
     width: 95%;
@@ -201,15 +198,12 @@ div.calmon tr.wend td.dayno,div.calmon tr.wend td.wday,div.calmon tr.wend td.des
   background: #f0f0f0;
 }
 @media (min-width: 590px) {
-  #fdcalendarsx table.month {
-    margin: 0 auto auto 20px;
-  }
   .ds8country_dp {
     padding: 6px 20px;
   }
   div.calyrmo,div.calyrmo:nth-of-type(even) {
     width: 33.2%;
-    padding: 0 0px 0px 0px
+    padding: 0 0px 0px 20px
   }
   div.calyrmo:nth-of-type(3n) {
     /*padding-right: 4vw;*/
@@ -232,9 +226,6 @@ div.calmon tr.wend td.dayno,div.calmon tr.wend td.wday,div.calmon tr.wend td.des
   }
 }
 @media (min-width: 926px) {
-  #fdcalendarsx table.month {
-    margin: 0 auto auto 20px;
-  }
   table.dates-descriptions {
     font-size: 16px;
   }
@@ -280,7 +271,7 @@ div.calmon tr.wend td.dayno,div.calmon tr.wend td.wday,div.calmon tr.wend td.des
   }
   div.calyrmo {
     margin-top: 10px;
-    padding: 0
+    padding: 0 0 0 20px;
   }
   div.calyrmo:nth-of-type(3n+1) {
     /*padding-left: 60px;*/
