--- a/_inc/front-calendar.css
+++ b/_inc/front-calendar.css
@@ -214,8 +214,11 @@ div.calmon tr.wend td.dayno,div.calmon tr.wend td.wday,div.calmon tr.wend td.des
     padding: 6px 20px;
   }
   div.calyrmo,div.calyrmo:nth-of-type(even) {
-    width: 32.2%;
+    width: 50%;
     padding: 0 0px 0px 2%;
+  }
+  div.calmain {
+    float:none
   }
   div.calyrmo:nth-of-type(odd) {
     padding-left: 2%;
@@ -259,6 +262,10 @@ div.calmon tr.wend td.dayno,div.calmon tr.wend td.wday,div.calmon tr.wend td.des
     display: flex;
     flex-wrap: wrap;
   }
+  div.calyrmo,div.calyrmo:nth-of-type(even) {
+    width: 33.3%;
+    padding: 0 0px 0px 2%;
+  }
   #fdcalendarsx div.calyr, #fdcalendarsx div.calyr a {
     font-size: 16px;
   }
@@ -270,7 +277,7 @@ div.calmon tr.wend td.dayno,div.calmon tr.wend td.wday,div.calmon tr.wend td.des
     font-size: 16px;
   }
   #fdcalendarsx table.month td {
-    padding: 2px 3px 3px 3px;
+    padding: 7px;
   }
   #fdcalendarsx div.calyr td.wno {
     font-size: 12px;
